fix: add overflow container for tables (#599)
* fix: add overflow container for tables

* fix: remove unnecessary styling

* fix: remove table container component

--- a/src/components/ComponentExample/component-example.scss
+++ b/src/components/ComponentExample/component-example.scss
@@ -13,16 +13,22 @@
 
 .component-example__live {
   display: flex;
+  overflow-x: auto;
   align-items: center;
-  justify-content: center;
+  justify-content: flex-start;
   width: 100%;
   min-height: rem(200px);
   position: relative;
-  padding: $spacing-07 $spacing-07 $spacing-08;
+  padding: 0;
   margin: 0;
   background-color: $ui-02;
   color: $text-01;
   border: 1rem solid $ui-02;
+
+  @include carbon--breakpoint('md') {
+    justify-content: center;
+    padding: $spacing-07 $spacing-07 $spacing-08;
+  }
 }
 
 .component-example__live.component-example__live--light {
